Base Outline of Website

--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/util.css">
     <title>Amazon India</title>
+
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <img src="/IMG/amazon-logo.png" alt="Amazon-logo" width="150px">
+            <ul>
+                <li>Delivery Location</li>
+                <li ><input type="text" placeholder="Search Here" ></li>
+                <li><button>Search</button></li>
+                <li><a href="account.html">Your Account</a></li>
+                <li><a href="orders.html">Your Orders</a></li>
+                <li><a href="cart.html">Cart</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <p>This is the main body</p>
+
+    </main>
+
+    <footer class="flex-center">
+        Amazon India &copy; 1999-2023 
+    </footer>
 </body>
 </html>
