Base Outline with css

--- a/index.html
+++ b/index.html
@@ -21,10 +21,21 @@
                 <li><a href="orders.html">Your Orders</a></li>
                 <li><a href="cart.html">Cart</a></li>
             </ul>
-        </nav>
+        </nav>  
+        
     </header>
 
     <main>
+        <nav class="sec">
+            <ul>
+                <li>☰ All</li>
+                <li>Prime</li>
+                <li>Best Seller</li>
+                <li>Customer Service</li>
+                <li>Today's Deals</li>
+            </ul>
+        </nav>
+        
         <p>This is the main body</p>
 
     </main>
